--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="okString">Ok</string>
     <string name="cancelString">Cancel</string>
 
+    <string name="action_add">Add</string>
+    <string name="action_about">About</string>
+    <string name="action_delete">Delete</string>
+
     <string name="FlingEvent">FLING</string>
     <string name="DTapEvent">DOUBLETAP</string>
     <string name="DragEvent">DRAG</string>
