--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="about_dialog_title">About</string>
     <string name="about_dialog_info">Make a list of items with further details!</string>
     <string name="about_dialog_programmer_names">By: Sam Dillin and Steve Stewart</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="delete_dialog_title">Delete</string>
+    <string name="delete_dialog_info">Do you want to delete this item?</string>
+    <string name="delete_confirmation">Yes</string>
+    <string name="delete_cancel">No</string>
 </resources>
