--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_add">Add</string>
     <string name="action_about">About</string>
     <string name="action_delete">Delete</string>
+    <string name="action_edit">Edit</string>
 
     <string name="FlingEvent">FLING</string>
     <string name="DTapEvent">DOUBLETAP</string>
